lkt/bootstrap/src/liblktlang.h

/*
 * Data type for all nodes. Nodes are assembled to make up a tree.  See the
 * node primitives below to inspect such trees.
 *
 * Unlike for contexts and units, this type has weak-reference semantics:
 * keeping a reference to a node has no effect on the decision to keep the unit
 * that it owns allocated. This means that once all references to the context
 * and units related to a node are dropped, the context and its units are
 * deallocated and the node becomes a stale reference: most operations on it
 * will raise a ``Stale_Reference_Error``.
 *
 * Note that since reparsing an analysis unit deallocates all the nodes it
 * contains, this operation makes all reference to these nodes stale as well.
 */
typedef struct lkt_base_node__struct *lkt_base_node;
        



    typedef struct {
            lkt_internal_metadata md;
            lkt_env_rebindings_type rebindings;
            lkt_bool from_rebound;
    } lkt_internal_entity_info;
        



    typedef struct {
            lkt_base_node node;
            lkt_internal_entity_info info;
    } lkt_node;
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_bin_op_f_op(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes: ``lkt_any_of``,
 * ``lkt_array_literal``, ``lkt_bin_op``, ``lkt_block_expr``,
 * ``lkt_call_expr``, ``lkt_cast_expr``, ``lkt_dot_expr``,
 * ``lkt_error_on_null``, ``lkt_generic_instantiation``, ``lkt_if_expr``,
 * ``lkt_isa``, ``lkt_keep_expr``, ``lkt_lambda_expr``, ``lkt_lit``,
 * ``lkt_logic_assign``, ``lkt_logic_expr``, ``lkt_logic_predicate``,
 * ``lkt_logic_propagate``, ``lkt_logic_unify``, ``lkt_match_expr``,
 * ``lkt_not_expr``, ``lkt_paren_expr``, ``lkt_raise_expr``, ``lkt_ref_id``,
 * ``lkt_subscript_expr``, ``lkt_try_expr``, ``lkt_un_op``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_bin_op_f_right(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field contains a list that itself contains one of the following nodes:
 * ``lkt_any_of``, ``lkt_array_literal``, ``lkt_bin_op``,
 * ``lkt_block_expr_clause``, ``lkt_block_expr``, ``lkt_call_expr``,
 * ``lkt_cast_expr``, ``lkt_dot_expr``, ``lkt_error_decl``,
 * ``lkt_error_on_null``, ``lkt_generic_instantiation``, ``lkt_if_expr``,
 * ``lkt_isa``, ``lkt_keep_expr``, ``lkt_lambda_expr``, ``lkt_lit``,
 * ``lkt_logic_assign``, ``lkt_logic_expr``, ``lkt_logic_predicate``,
 * ``lkt_logic_propagate``, ``lkt_logic_unify``, ``lkt_match_expr``,
 * ``lkt_not_expr``, ``lkt_paren_expr``, ``lkt_raise_expr``, ``lkt_ref_id``,
 * ``lkt_subscript_expr``, ``lkt_try_expr``, ``lkt_un_op``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_block_expr_f_clauses(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes: ``lkt_array_literal``,
 * ``lkt_block_expr``, ``lkt_call_expr``, ``lkt_cast_expr``, ``lkt_dot_expr``,
 * ``lkt_error_on_null``, ``lkt_generic_instantiation``, ``lkt_keep_expr``,
 * ``lkt_lit``, ``lkt_logic_expr``, ``lkt_logic_predicate``,
 * ``lkt_match_expr``, ``lkt_paren_expr``, ``lkt_ref_id``,
 * ``lkt_subscript_expr``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_cast_expr_f_expr(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_cast_expr_f_null_cond(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_cast_expr_f_excludes_null(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes:
 * ``lkt_function_type_ref``, ``lkt_generic_type_ref``, ``lkt_simple_type_ref``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_cast_expr_f_dest_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes: ``lkt_array_literal``,
 * ``lkt_block_expr``, ``lkt_call_expr``, ``lkt_cast_expr``, ``lkt_dot_expr``,
 * ``lkt_error_on_null``, ``lkt_generic_instantiation``, ``lkt_keep_expr``,
 * ``lkt_lit``, ``lkt_logic_expr``, ``lkt_logic_predicate``,
 * ``lkt_match_expr``, ``lkt_paren_expr``, ``lkt_ref_id``,
 * ``lkt_subscript_expr``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_dot_expr_f_prefix(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_dot_expr_f_null_cond(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_dot_expr_f_suffix(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes: ``lkt_array_literal``,
 * ``lkt_block_expr``, ``lkt_call_expr``, ``lkt_cast_expr``, ``lkt_dot_expr``,
 * ``lkt_error_on_null``, ``lkt_generic_instantiation``, ``lkt_keep_expr``,
 * ``lkt_lit``, ``lkt_logic_expr``, ``lkt_logic_predicate``,
 * ``lkt_match_expr``, ``lkt_paren_expr``, ``lkt_ref_id``,
 * ``lkt_subscript_expr``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_error_on_null_f_expr(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes: ``lkt_array_literal``,
 * ``lkt_block_expr``, ``lkt_call_expr``, ``lkt_cast_expr``, ``lkt_dot_expr``,
 * ``lkt_error_on_null``, ``lkt_generic_instantiation``, ``lkt_keep_expr``,
 * ``lkt_lit``, ``lkt_logic_expr``, ``lkt_logic_predicate``,
 * ``lkt_match_expr``, ``lkt_paren_expr``, ``lkt_ref_id``,
 * ``lkt_subscript_expr``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_generic_instantiation_f_name(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field contains a list that itself contains one of the following nodes:
 * ``lkt_function_type_ref``, ``lkt_generic_type_ref``, ``lkt_simple_type_ref``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_generic_instantiation_f_args(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_grammar_discard_f_expr(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_grammar_dont_skip_f_expr(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_grammar_dont_skip_f_dont_skip(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_grammar_list_f_list_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_grammar_list_f_kind(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_grammar_list_f_expr(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field may be null even when there are no parsing errors.
 */
extern int lkt_grammar_list_f_sep(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes:
 * ``lkt_function_type_ref``, ``lkt_generic_type_ref``, ``lkt_simple_type_ref``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_grammar_null_f_name(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_grammar_opt_f_expr(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_grammar_opt_error_f_expr(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_grammar_opt_error_group_f_expr(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_grammar_opt_group_f_expr(
    lkt_node *node,


    lkt_node *value_p
);