lkt/bootstrap/src/liblktlang-implementation-c.ads


      with Export        => True,
           Convention    => C,
           External_name => "lkt_bin_op_f_op";
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_bin_op_f_right
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_bin_op_f_right";
   --  This field can contain one of the following nodes: :ada:ref:`Any_Of`,
   --  :ada:ref:`Array_Literal`, :ada:ref:`Bin_Op`, :ada:ref:`Block_Expr`,
   --  :ada:ref:`Call_Expr`, :ada:ref:`Cast_Expr`, :ada:ref:`Dot_Expr`,
   --  :ada:ref:`Error_On_Null`, :ada:ref:`Generic_Instantiation`,
   --  :ada:ref:`If_Expr`, :ada:ref:`Isa`, :ada:ref:`Keep_Expr`,
   --  :ada:ref:`Lambda_Expr`, :ada:ref:`Lit`, :ada:ref:`Logic_Assign`,
   --  :ada:ref:`Logic_Expr`, :ada:ref:`Logic_Predicate`,
   --  :ada:ref:`Logic_Propagate`, :ada:ref:`Logic_Unify`,
   --  :ada:ref:`Match_Expr`, :ada:ref:`Not_Expr`, :ada:ref:`Paren_Expr`,
   --  :ada:ref:`Raise_Expr`, :ada:ref:`Ref_Id`, :ada:ref:`Subscript_Expr`,
   --  :ada:ref:`Try_Expr`, :ada:ref:`Un_Op`
   --
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_block_expr_f_clauses
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_block_expr_f_clauses";
   --  This field contains a list that itself contains one of the following
   --  nodes: :ada:ref:`Any_Of`, :ada:ref:`Array_Literal`, :ada:ref:`Bin_Op`,
   --  :ada:ref:`Block_Expr_Clause`, :ada:ref:`Block_Expr`,
   --  :ada:ref:`Call_Expr`, :ada:ref:`Cast_Expr`, :ada:ref:`Dot_Expr`,
   --  :ada:ref:`Error_Decl`, :ada:ref:`Error_On_Null`,
   --  :ada:ref:`Generic_Instantiation`, :ada:ref:`If_Expr`, :ada:ref:`Isa`,
   --  :ada:ref:`Keep_Expr`, :ada:ref:`Lambda_Expr`, :ada:ref:`Lit`,
   --  :ada:ref:`Logic_Assign`, :ada:ref:`Logic_Expr`,
   --  :ada:ref:`Logic_Predicate`, :ada:ref:`Logic_Propagate`,
   --  :ada:ref:`Logic_Unify`, :ada:ref:`Match_Expr`, :ada:ref:`Not_Expr`,
   --  :ada:ref:`Paren_Expr`, :ada:ref:`Raise_Expr`, :ada:ref:`Ref_Id`,
   --  :ada:ref:`Subscript_Expr`, :ada:ref:`Try_Expr`, :ada:ref:`Un_Op`
   --
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_cast_expr_f_expr
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_cast_expr_f_expr";
   --  This field can contain one of the following nodes:
   --  :ada:ref:`Array_Literal`, :ada:ref:`Block_Expr`, :ada:ref:`Call_Expr`,
   --  :ada:ref:`Cast_Expr`, :ada:ref:`Dot_Expr`, :ada:ref:`Error_On_Null`,
   --  :ada:ref:`Generic_Instantiation`, :ada:ref:`Keep_Expr`, :ada:ref:`Lit`,
   --  :ada:ref:`Logic_Expr`, :ada:ref:`Logic_Predicate`,
   --  :ada:ref:`Match_Expr`, :ada:ref:`Paren_Expr`, :ada:ref:`Ref_Id`,
   --  :ada:ref:`Subscript_Expr`
   --
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_cast_expr_f_null_cond
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_cast_expr_f_null_cond";
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_cast_expr_f_excludes_null
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_cast_expr_f_excludes_null";
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_cast_expr_f_dest_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_cast_expr_f_dest_type";
   --  This field can contain one of the following nodes:
   --  :ada:ref:`Function_Type_Ref`, :ada:ref:`Generic_Type_Ref`,
   --  :ada:ref:`Simple_Type_Ref`
   --
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_dot_expr_f_prefix
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_dot_expr_f_prefix";
   --  This field can contain one of the following nodes:
   --  :ada:ref:`Array_Literal`, :ada:ref:`Block_Expr`, :ada:ref:`Call_Expr`,
   --  :ada:ref:`Cast_Expr`, :ada:ref:`Dot_Expr`, :ada:ref:`Error_On_Null`,
   --  :ada:ref:`Generic_Instantiation`, :ada:ref:`Keep_Expr`, :ada:ref:`Lit`,
   --  :ada:ref:`Logic_Expr`, :ada:ref:`Logic_Predicate`,
   --  :ada:ref:`Match_Expr`, :ada:ref:`Paren_Expr`, :ada:ref:`Ref_Id`,
   --  :ada:ref:`Subscript_Expr`
   --
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_dot_expr_f_null_cond
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_dot_expr_f_null_cond";
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_dot_expr_f_suffix
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_dot_expr_f_suffix";
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_error_on_null_f_expr
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_error_on_null_f_expr";
   --  This field can contain one of the following nodes:
   --  :ada:ref:`Array_Literal`, :ada:ref:`Block_Expr`, :ada:ref:`Call_Expr`,
   --  :ada:ref:`Cast_Expr`, :ada:ref:`Dot_Expr`, :ada:ref:`Error_On_Null`,
   --  :ada:ref:`Generic_Instantiation`, :ada:ref:`Keep_Expr`, :ada:ref:`Lit`,
   --  :ada:ref:`Logic_Expr`, :ada:ref:`Logic_Predicate`,
   --  :ada:ref:`Match_Expr`, :ada:ref:`Paren_Expr`, :ada:ref:`Ref_Id`,
   --  :ada:ref:`Subscript_Expr`
   --
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_generic_instantiation_f_name
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_generic_instantiation_f_name";
   --  This field can contain one of the following nodes:
   --  :ada:ref:`Array_Literal`, :ada:ref:`Block_Expr`, :ada:ref:`Call_Expr`,
   --  :ada:ref:`Cast_Expr`, :ada:ref:`Dot_Expr`, :ada:ref:`Error_On_Null`,
   --  :ada:ref:`Generic_Instantiation`, :ada:ref:`Keep_Expr`, :ada:ref:`Lit`,
   --  :ada:ref:`Logic_Expr`, :ada:ref:`Logic_Predicate`,
   --  :ada:ref:`Match_Expr`, :ada:ref:`Paren_Expr`, :ada:ref:`Ref_Id`,
   --  :ada:ref:`Subscript_Expr`
   --
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_generic_instantiation_f_args
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_generic_instantiation_f_args";
   --  This field contains a list that itself contains one of the following
   --  nodes: :ada:ref:`Function_Type_Ref`, :ada:ref:`Generic_Type_Ref`,
   --  :ada:ref:`Simple_Type_Ref`
   --
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_grammar_discard_f_expr
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_grammar_discard_f_expr";
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_grammar_dont_skip_f_expr
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_grammar_dont_skip_f_expr";
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_grammar_dont_skip_f_dont_skip
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_grammar_dont_skip_f_dont_skip";
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_grammar_list_f_list_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_grammar_list_f_list_type";
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_grammar_list_f_kind
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_grammar_list_f_kind";
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_grammar_list_f_expr
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_grammar_list_f_expr";
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_grammar_list_f_sep
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_grammar_list_f_sep";
   --  This field may be null even when there are no parsing errors.

           
   

   
   

   function lkt_grammar_null_f_name
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_grammar_null_f_name";
   --  This field can contain one of the following nodes:
   --  :ada:ref:`Function_Type_Ref`, :ada:ref:`Generic_Type_Ref`,
   --  :ada:ref:`Simple_Type_Ref`
   --
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_grammar_opt_f_expr
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_grammar_opt_f_expr";
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_grammar_opt_error_f_expr
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_grammar_opt_error_f_expr";
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_grammar_opt_error_group_f_expr
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_grammar_opt_error_group_f_expr";
   --  When there are no parsing errors, this field is never null.

           
   

   
   

   function lkt_grammar_opt_group_f_expr
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int
